# bt-ccxt-store

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-test.yml
ccxtbt/: __init__.py  ccxtbroker.py  ccxtfeed.py  ccxtstore.py
samples/: backtesting.py  kraken-example.py
samples/binance/: SMA.py  buy-order.py  stop-loss-limit-order.py  take-profit-limit-order.py
samples/bitmex/: SMA.py
test/ccxtbt/: test_optional_fetch_balance.py
